--- a/basics/Tensors in Tensorflow.ipynb
+++ b/basics/Tensors in Tensorflow.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "id": "2f711acb",
    "metadata": {},
    "outputs": [
@@ -55,6 +55,34 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(5.0, shape=(), dtype=float32)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-10-31 12:07:43.041319: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.042047: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.074197: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.074893: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.075629: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.076269: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.077677: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2021-10-31 12:07:43.217953: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.218554: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.219109: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.219599: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.219969: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:43.220475: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:44.001508: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:44.002115: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:44.002551: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:44.003282: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:44.003687: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:44.004190: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1510] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 9597 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:2d:00.0, compute capability: 8.6\n",
+      "2021-10-31 12:07:44.004893: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2021-10-31 12:07:44.005284: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1510] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 5383 MB memory:  -> device: 1, name: NVIDIA GeForce GTX 1060 6GB, pci bus id: 0000:24:00.0, compute capability: 6.1\n"
      ]
     }
    ],
@@ -87,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "id": "bd06aff4",
    "metadata": {},
    "outputs": [
@@ -118,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 16,
    "id": "a62f98c9",
    "metadata": {},
    "outputs": [
@@ -126,169 +154,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor(\n",
-      "[  1.   2.   3.   4.   5.   6.   7.   8.   9.  10.  11.  12.  13.  14.\n",
-      "  15.  16.  17.  18.  19.  20.  21.  22.  23.  24.  25.  26.  27.  28.\n",
-      "  29.  30.  31.  32.  33.  34.  35.  36.  37.  38.  39.  40.  41.  42.\n",
-      "  43.  44.  45.  46.  47.  48.  49.  50.  51.  52.  53.  54.  55.  56.\n",
-      "  57.  58.  59.  60.  61.  62.  63.  64.  65.  66.  67.  68.  69.  70.\n",
-      "  71.  72.  73.  74.  75.  76.  77.  78.  79.  80.  81.  82.  83.  84.\n",
-      "  85.  86.  87.  88.  89.  90.  91.  92.  93.  94.  95.  96.  97.  98.\n",
-      "  99. 100.], shape=(100,), dtype=float32) \n",
+      "(100,) \n",
       "\n",
-      "tf.Tensor(\n",
-      "[[[  1.   2.]\n",
-      "  [  3.   4.]\n",
-      "  [  5.   6.]\n",
-      "  [  7.   8.]\n",
-      "  [  9.  10.]\n",
-      "  [ 11.  12.]\n",
-      "  [ 13.  14.]\n",
-      "  [ 15.  16.]\n",
-      "  [ 17.  18.]\n",
-      "  [ 19.  20.]]\n",
+      "(5, 10, 2) \n",
       "\n",
-      " [[ 21.  22.]\n",
-      "  [ 23.  24.]\n",
-      "  [ 25.  26.]\n",
-      "  [ 27.  28.]\n",
-      "  [ 29.  30.]\n",
-      "  [ 31.  32.]\n",
-      "  [ 33.  34.]\n",
-      "  [ 35.  36.]\n",
-      "  [ 37.  38.]\n",
-      "  [ 39.  40.]]\n",
+      "(1, 100) \n",
       "\n",
-      " [[ 41.  42.]\n",
-      "  [ 43.  44.]\n",
-      "  [ 45.  46.]\n",
-      "  [ 47.  48.]\n",
-      "  [ 49.  50.]\n",
-      "  [ 51.  52.]\n",
-      "  [ 53.  54.]\n",
-      "  [ 55.  56.]\n",
-      "  [ 57.  58.]\n",
-      "  [ 59.  60.]]\n",
+      "(100,) \n",
       "\n",
-      " [[ 61.  62.]\n",
-      "  [ 63.  64.]\n",
-      "  [ 65.  66.]\n",
-      "  [ 67.  68.]\n",
-      "  [ 69.  70.]\n",
-      "  [ 71.  72.]\n",
-      "  [ 73.  74.]\n",
-      "  [ 75.  76.]\n",
-      "  [ 77.  78.]\n",
-      "  [ 79.  80.]]\n",
+      "(2, 10, 5) \n",
       "\n",
-      " [[ 81.  82.]\n",
-      "  [ 83.  84.]\n",
-      "  [ 85.  86.]\n",
-      "  [ 87.  88.]\n",
-      "  [ 89.  90.]\n",
-      "  [ 91.  92.]\n",
-      "  [ 93.  94.]\n",
-      "  [ 95.  96.]\n",
-      "  [ 97.  98.]\n",
-      "  [ 99. 100.]]], shape=(5, 10, 2), dtype=float32) \n",
-      "\n",
-      "tf.Tensor(\n",
-      "[[[  1.  21.  41.  61.  81.]\n",
-      "  [  3.  23.  43.  63.  83.]\n",
-      "  [  5.  25.  45.  65.  85.]\n",
-      "  [  7.  27.  47.  67.  87.]\n",
-      "  [  9.  29.  49.  69.  89.]\n",
-      "  [ 11.  31.  51.  71.  91.]\n",
-      "  [ 13.  33.  53.  73.  93.]\n",
-      "  [ 15.  35.  55.  75.  95.]\n",
-      "  [ 17.  37.  57.  77.  97.]\n",
-      "  [ 19.  39.  59.  79.  99.]]\n",
-      "\n",
-      " [[  2.  22.  42.  62.  82.]\n",
-      "  [  4.  24.  44.  64.  84.]\n",
-      "  [  6.  26.  46.  66.  86.]\n",
-      "  [  8.  28.  48.  68.  88.]\n",
-      "  [ 10.  30.  50.  70.  90.]\n",
-      "  [ 12.  32.  52.  72.  92.]\n",
-      "  [ 14.  34.  54.  74.  94.]\n",
-      "  [ 16.  36.  56.  76.  96.]\n",
-      "  [ 18.  38.  58.  78.  98.]\n",
-      "  [ 20.  40.  60.  80. 100.]]], shape=(2, 10, 5), dtype=float32) \n",
-      "\n",
-      "tf.Tensor(\n",
-      "[[[  1.   2.]\n",
-      "  [  3.   4.]\n",
-      "  [  5.   6.]\n",
-      "  [  7.   8.]\n",
-      "  [  9.  10.]\n",
-      "  [ 11.  12.]\n",
-      "  [ 13.  14.]\n",
-      "  [ 15.  16.]\n",
-      "  [ 17.  18.]\n",
-      "  [ 19.  20.]]\n",
-      "\n",
-      " [[ 21.  22.]\n",
-      "  [ 23.  24.]\n",
-      "  [ 25.  26.]\n",
-      "  [ 27.  28.]\n",
-      "  [ 29.  30.]\n",
-      "  [ 31.  32.]\n",
-      "  [ 33.  34.]\n",
-      "  [ 35.  36.]\n",
-      "  [ 37.  38.]\n",
-      "  [ 39.  40.]]\n",
-      "\n",
-      " [[ 41.  42.]\n",
-      "  [ 43.  44.]\n",
-      "  [ 45.  46.]\n",
-      "  [ 47.  48.]\n",
-      "  [ 49.  50.]\n",
-      "  [ 51.  52.]\n",
-      "  [ 53.  54.]\n",
-      "  [ 55.  56.]\n",
-      "  [ 57.  58.]\n",
-      "  [ 59.  60.]]\n",
-      "\n",
-      " [[ 61.  62.]\n",
-      "  [ 63.  64.]\n",
-      "  [ 65.  66.]\n",
-      "  [ 67.  68.]\n",
-      "  [ 69.  70.]\n",
-      "  [ 71.  72.]\n",
-      "  [ 73.  74.]\n",
-      "  [ 75.  76.]\n",
-      "  [ 77.  78.]\n",
-      "  [ 79.  80.]]\n",
-      "\n",
-      " [[ 81.  82.]\n",
-      "  [ 83.  84.]\n",
-      "  [ 85.  86.]\n",
-      "  [ 87.  88.]\n",
-      "  [ 89.  90.]\n",
-      "  [ 91.  92.]\n",
-      "  [ 93.  94.]\n",
-      "  [ 95.  96.]\n",
-      "  [ 97.  98.]\n",
-      "  [ 99. 100.]]], shape=(5, 10, 2), dtype=float32)\n"
+      "(5, 10, 2)\n"
      ]
     }
    ],
    "source": [
     "tensor = tf.range(1,101, dtype=tf.float32)\n",
-    "print(tensor, \"\\n\")\n",
+    "print(tensor.shape, \"\\n\")\n",
     "\n",
     "# reshaping\n",
     "reshaped_tensor = tf.reshape(tensor, (5,10,2))\n",
-    "print(reshaped_tensor, \"\\n\")\n",
+    "print(reshaped_tensor.shape, \"\\n\")\n",
+    "\n",
+    "# adding a dimension of 1: e.g. from tensor shape (32,10) -> (32,10,1)\n",
+    "expanded_tensor = tf.expand_dims(tensor, axis=0)\n",
+    "print(expanded_tensor.shape, \"\\n\")\n",
+    "\n",
+    "# removing dimensions of 1: e.g. (1,20,20) -> (20,20)\n",
+    "squeezed_tensor = tf.squeeze(expanded_tensor, axis=None)\n",
+    "print(squeezed_tensor.shape, \"\\n\")\n",
     "\n",
     "# transposing\n",
     "transposed_tensor = tf.transpose(reshaped_tensor)\n",
-    "print(transposed_tensor, \"\\n\")\n",
+    "print(transposed_tensor.shape, \"\\n\")\n",
     "\n",
-    "# transposing with permutation\n",
-    "\n",
+    "# transposing with permutation: e.g. (10,5,2) -> (5,10,2)\n",
     "permuted_tensor = tf.transpose(reshaped_tensor, [0,1,2])\n",
-    "print(permuted_tensor)"
+    "print(permuted_tensor.shape)"
    ]
   },
   {
@@ -301,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "id": "2fbe6662",
    "metadata": {},
    "outputs": [
@@ -310,6 +212,13 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor([[5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]], shape=(1, 10), dtype=float32)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-10-31 12:07:44.621574: I tensorflow/stream_executor/cuda/cuda_blas.cc:1760] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
      ]
     }
    ],
@@ -323,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "id": "7830b9ff",
    "metadata": {
     "scrolled": true
@@ -355,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 7,
    "id": "a6119f7d",
    "metadata": {},
    "outputs": [
@@ -672,7 +581,7 @@
        "         [1., 1., 1., ..., 0., 0., 0.]]]], dtype=float32)>"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 8,
    "id": "dbda73e9",
    "metadata": {
     "scrolled": true
@@ -808,7 +717,7 @@
        "         [0., 0., 0., ..., 0., 0., 0.]]]], dtype=float32)>"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 9,
    "id": "710ba82f",
    "metadata": {},
    "outputs": [
@@ -856,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 10,
    "id": "27ad223c",
    "metadata": {},
    "outputs": [
@@ -885,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 11,
    "id": "716ec4e5",
    "metadata": {},
    "outputs": [],
@@ -895,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 12,
    "id": "9d9479eb",
    "metadata": {},
    "outputs": [
@@ -909,6 +818,51 @@
    ],
    "source": [
     "print(stored_tensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3dbd86a",
+   "metadata": {},
+   "source": [
+    "# Reduce-operations in tensorflow\n",
+    "\n",
+    "- instead of sum, we use reduce_sum and specify the axis over which we want to sum.\n",
+    "- same for other operations like reduce_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a327eec8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32, 4, 1) \n",
+      "\n",
+      "(32, 1) \n",
+      "\n",
+      "(4, 1) \n",
+      "\n",
+      "()\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor = tf.ones((32,4,1))\n",
+    "print(tensor.shape,\"\\n\")\n",
+    "\n",
+    "feature_sum = tf.reduce_sum(tensor, axis=1)\n",
+    "print(feature_sum.shape, \"\\n\")\n",
+    "\n",
+    "batch_sum = tf.reduce_sum(tensor, axis=0)\n",
+    "print(batch_sum.shape, \"\\n\")\n",
+    "\n",
+    "total_sum = tf.reduce_sum(tensor, axis=None)\n",
+    "print(total_sum.shape)"
    ]
   }
  ],
