--- a/basics/Tensors in Tensorflow.ipynb
+++ b/basics/Tensors in Tensorflow.ipynb
@@ -23,7 +23,7 @@
     "Rank 1 tensor: **vector** (e.g. \\begin{pmatrix}1 \\\\ 2 \\\\ 3 \\end{pmatrix}\n",
     "\n",
     "\n",
-    "Rank 2 tensor: **matrix** (e.g. \\begin{bmatrix}1 \\ 2 \\ 3 \\\\ 4 \\ 5 \\ 6 \\\\ 7 \\ 8 \\ 9 \\end{bmatrix}\n",
+    "Rank 2 tensor: **matrix** (e.g. \\begin{bmatrix}1 & 2 & 3 \\\\ 4 & 5 & 6 \\\\ 7 & 8 & 9 \\end{bmatrix}\n",
     "\n",
     "Rank 3 tensor: e.g. **image** with dimensions width * height * color channels\n",
     "\n",
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3dbd86a",
+   "id": "0cbcdc28",
    "metadata": {},
    "source": [
     "# Reduce-operations in tensorflow\n",
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a327eec8",
+   "id": "ae299c59",
    "metadata": {},
    "outputs": [
     {
