--- a/basics/Automatic Differentiation with tf.GradientTape().ipynb
+++ b/basics/Automatic Differentiation with tf.GradientTape().ipynb
@@ -2,13 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d9a7781d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "gpus = tf.config.list_physical_devices('GPU')\n",
+    "if gpus:\n",
+    "  # Restrict TensorFlow to only allocate 1GB of memory on the first GPU\n",
+    "  try:\n",
+    "    tf.config.set_logical_device_configuration(\n",
+    "        gpus[0],\n",
+    "        [tf.config.LogicalDeviceConfiguration(memory_limit=1024)])\n",
+    "    logical_gpus = tf.config.list_logical_devices('GPU')\n",
+    "    print(len(gpus), \"Physical GPUs,\", len(logical_gpus), \"Logical GPUs\")\n",
+    "  except RuntimeError as e:\n",
+    "    # Virtual devices must be set before GPUs have been initialized\n",
+    "    print(e)"
    ]
   },
   {
@@ -16,7 +29,7 @@
    "id": "7e95ea17",
    "metadata": {},
    "source": [
-    "We first create a set of 20 values spaced linearly between 0 and 100. We then create targets by multiplying with pi. \n",
+    "We first create a set of 20 values randomly sampled between 0 and 100. We then create targets by multiplying the values with pi. \n",
     "\n",
     "So our dataset is sampled from a function $f(x) = \\pi x$\n",
     "\n",
@@ -30,29 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "id": "1e355489",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "x = tf.linspace(0,100, 20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "id": "9450c919",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = x * np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 4,
    "id": "28e86426",
    "metadata": {},
    "outputs": [],
@@ -64,24 +55,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 5,
+   "id": "1e355489",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# generate data (X) and targets (Y)\n",
+    "\n",
+    "X = tf.random.uniform((20,1), minval= 0, maxval = 10)\n",
+    "Y = X * np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "534ccae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize parameter variable to a value far away from pi\n",
+    "parameter_estimate = tf.Variable(7.5, trainable=True, dtype=tf.float32)\n",
+    "\n",
+    "# set learning rate\n",
+    "learning_rate = tf.constant(0.005, dtype=tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "5df59a36",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set learning rate\n",
-    "learning_rate = tf.constant(0.00005, dtype=tf.float64)\n",
-    "\n",
-    "# initialize parameter variable to a value far away from pi\n",
-    "parameter_estimate = tf.Variable(520.5, trainable=True, dtype=tf.float64)\n",
-    "\n",
-    "\n",
     "#iterate over epochs\n",
-    "for epoch in range(1):\n",
+    "for epoch in range(2):\n",
     "\n",
     "    # iterate over training examples\n",
-    "    for x,y in zip(x,y):\n",
-    "\n",
+    "    for x,y in zip(X,Y):\n",
+    "        \n",
     "        # within GradientTape context manager, calculate loss between targets and prediction\n",
     "        with tf.GradientTape() as tape:\n",
     "\n",
@@ -101,23 +114,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
-   "id": "96cc22c9",
+   "execution_count": 8,
+   "id": "dd8e863b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<tf.Variable 'Variable:0' shape=() dtype=float64, numpy=3.141592653589793>"
-      ]
-     },
-     "execution_count": 204,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14159274\n"
+     ]
     }
    ],
    "source": [
-    "parameter_estimate"
+    "tf.print(parameter_estimate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f24e5e4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(True, shape=(), dtype=bool)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parameter_estimate == np.pi)"
    ]
   }
  ],
