--- a/basics/Optimizers and Losses.ipynb
+++ b/basics/Optimizers and Losses.ipynb
@@ -2,13 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "f659a31f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "gpus = tf.config.list_physical_devices('GPU')\n",
+    "if gpus:\n",
+    "  # Restrict TensorFlow to only allocate 1GB of memory on the first GPU\n",
+    "  try:\n",
+    "    tf.config.set_logical_device_configuration(\n",
+    "        gpus[0],\n",
+    "        [tf.config.LogicalDeviceConfiguration(memory_limit=1024)])\n",
+    "    logical_gpus = tf.config.list_logical_devices('GPU')\n",
+    "    print(len(gpus), \"Physical GPUs,\", len(logical_gpus), \"Logical GPUs\")\n",
+    "  except RuntimeError as e:\n",
+    "    # Virtual devices must be set before GPUs have been initialized\n",
+    "    print(e)\n"
    ]
   },
   {
@@ -33,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "59133169",
    "metadata": {},
    "outputs": [
@@ -41,12 +54,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error for each training example in the batch:\n",
-      " [0.1370967  0.15011537 0.2427506  0.12684295 0.1503181  0.15855145\n",
-      " 0.16248909 0.10417567] \n",
-      "\n",
-      "average mse for the batch:\n",
-      " 0.15404248\n"
+      "MSE error for the batch:\n",
+      " 0.22216006 \n",
+      "\n"
      ]
     }
    ],
@@ -57,12 +67,9 @@
     "targets = tf.random.uniform((BATCH_SIZE, N_PREDICTED_FEATURES))\n",
     "predictions = tf.random.uniform((BATCH_SIZE, N_PREDICTED_FEATURES))\n",
     "\n",
-    "\n",
-    "mean_squared_error = tf.keras.losses.MSE(targets,predictions)\n",
-    "print(\"error for each training example in the batch:\\n\", mean_squared_error.numpy(), \"\\n\")\n",
-    "\n",
-    "average_mse = tf.reduce_mean(mean_squared_error, axis=None)\n",
-    "print(\"average mse for the batch:\\n\", average_mse.numpy())"
+    "mse_loss = tf.keras.losses.MeanSquaredError()\n",
+    "mean_squared_error = mse_loss(targets,predictions)\n",
+    "print(\"MSE error for the batch:\\n\", mean_squared_error.numpy(), \"\\n\")"
    ]
   },
   {
@@ -75,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "63a1c4ce",
    "metadata": {},
    "outputs": [
@@ -84,7 +91,7 @@
      "output_type": "stream",
      "text": [
       "CCE loss between predicted label probabilities and ground truth labels is:\n",
-      " 1.5270935\n"
+      " 0.8781191\n"
      ]
     }
    ],
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "id": "fd0c49b8",
    "metadata": {},
    "outputs": [
@@ -130,7 +137,7 @@
      "output_type": "stream",
      "text": [
       "BCE loss between predicted label probabilities and ground truth labels is:\n",
-      " 0.96125954\n"
+      " 0.8894618\n"
      ]
     }
    ],
@@ -151,12 +158,14 @@
    "id": "33cee8b0",
    "metadata": {},
    "source": [
-    "# Optimizers"
+    "# Making use of optimizers in the train loop\n",
+    "\n",
+    "- Optimizers take care of applying the computed gradients to update the parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "id": "aba3418c",
    "metadata": {},
    "outputs": [
@@ -164,54 +173,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "before training: <tf.Variable 'Variable:0' shape=() dtype=float32, numpy=520.5>\n",
-      "after training:  <tf.Variable 'Variable:0' shape=() dtype=float32, numpy=3.1415927>\n"
+      "before training: <tf.Variable 'Variable:0' shape=() dtype=float32, numpy=7.5>\n",
+      "after training:  <tf.Variable 'Variable:0' shape=() dtype=float32, numpy=3.141593>\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "# choose optimizer and loss\n",
     "\n",
-    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.001,\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.005,\n",
     "                                   momentum=0)\n",
     "\n",
-    "loss_function = tf.keras.losses.MSE\n",
+    "loss_function = tf.keras.losses.MeanSquaredError()\n",
     "\n",
     "# create data\n",
-    "x = tf.linspace(0,100, 128)\n",
-    "x = tf.cast(x, tf.float32) # turn into float32 tensor\n",
+    "X = tf.random.uniform((20,1), minval= 0, maxval = 10)\n",
+    "Y = X * np.pi\n",
     "\n",
-    "y = x * np.pi\n",
     "\n",
     "# a simple linear univariate model function without bias\n",
     "def model(x, parameter):\n",
     "    return x * parameter\n",
     "\n",
-    "\n",
-    "# set learning rate\n",
-    "learning_rate = 0.001\n",
-    "\n",
     "# initialize parameter variable to a value far away from pi\n",
-    "parameter_estimate = tf.Variable(520.5, trainable=True, dtype=tf.float32)\n",
+    "parameter_estimate = tf.Variable(7.5, trainable=True, dtype=tf.float32)\n",
     "\n",
     "print(\"before training:\", parameter_estimate)\n",
     "\n",
     "#iterate over epochs\n",
-    "for epoch in range(1):\n",
+    "for epoch in range(2):\n",
     "\n",
-    "    # iterate over training examples\n",
-    "    for x,y in zip(x,y):\n",
-    "        \n",
-    "        x = tf.expand_dims(x, axis = 0) # add batch dimension (of 1) \n",
-    "        y = tf.expand_dims(y, axis = 0)\n",
+    "    # iterate over training examples (no batch dimension, but loss_function can take that too)\n",
+    "    for x,y in zip(X,Y):\n",
     "        \n",
     "        # within GradientTape context manager, calculate loss between targets and prediction\n",
     "        with tf.GradientTape() as tape:\n",
     "\n",
     "            prediction = model(x, parameter_estimate)\n",
     "\n",
-    "            loss = tf.reduce_mean(loss_function(y, prediction))\n",
+    "            loss = loss_function(y, prediction)\n",
     "\n",
     "        # outside of context manager, obtain gradients with respect to list of trainable variables\n",
     "        gradients = tape.gradient(loss, [parameter_estimate])\n",
