--- a/CNNs/Convolutional Layers and Weight Sharing.ipynb
+++ b/CNNs/Convolutional Layers and Weight Sharing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b92f9194",
+   "id": "d7002d50",
    "metadata": {},
    "source": [
     "# Fully connected layer with Conv2D\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d7c909d5",
+   "id": "aa36188b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "4ecbb624",
+   "id": "b10d260c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,25 +35,26 @@
     "    input_shape = (16,16)\n",
     "    n_outputs = 128\n",
     "    \n",
-    "    \n",
+    "    #create input of shape (1,16,16,1)\n",
     "    input_img= tf.random.uniform(shape=(1, input_shape[0], input_shape[1],1))\n",
     "    \n",
+    "    # instantiate Conv2D layer with 128 filters with kernel size (16,16), without extra padding\n",
     "    convlayer = tf.keras.layers.Conv2D(filters=n_outputs, \n",
     "                                       kernel_size=input_shape, \n",
     "                                       strides=(1, 1), \n",
     "                                       padding=\"valid\")\n",
     "    \n",
+    "    # instantiate dense layer with 128 outputs\n",
     "    denselayer= tf.keras.layers.Dense(n_outputs)\n",
     "    \n",
-    "    \n",
+    "    # flatten input to process it with dense layer\n",
     "    flatted_input = tf.keras.layers.Flatten()(input_img)\n",
-    "    \n",
-    "    \n",
-    "    convoutput = convlayer(input_img)\n",
     "    denseoutput = denselayer(flatted_input)\n",
     "    \n",
+    "    # process input with convlayer\n",
+    "    convoutput = convlayer(input_img)\n",
     "    \n",
-    "    # reshape weights from dense layer into shape of conv layer weights\n",
+    "    # reshape weights from dense layer into shape of conv layer weights such that we can use the same weights for both\n",
     "    dense_weights = tf.reshape(denselayer.weights[0], \n",
     "           shape = convlayer.weights[0].shape)\n",
     "    \n",
@@ -72,8 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "1adbd1b9",
+   "execution_count": 52,
+   "id": "175173b5",
    "metadata": {},
    "outputs": [
     {
@@ -97,8 +98,7 @@
     "print(\"Conv layer has same weights as the dense layer:\", tf.reduce_all(convlayer.weights[0] == tf.reshape(\n",
     "    denselayer.weights[0], shape = convlayer.weights[0].shape)).numpy())\n",
     "\n",
-    "print(\"Same output for convolutional and dense layer:\", tf.reduce_all(convoutput == tf.reshape(\n",
-    "    denseoutput, shape=convoutput.shape)).numpy())"
+    "print(\"Same output for convolutional and dense layer:\", tf.reduce_all(convoutput == denseoutput).numpy())"
    ]
   },
   {
@@ -111,10 +111,10 @@
     }
    },
    "cell_type": "markdown",
-   "id": "3c29a0da",
+   "id": "ad19f452",
    "metadata": {},
    "source": [
-    "# Convolutional layers as spatial weight sharing\n",
+    "# Convolutional layers for spatial weight sharing\n",
     "\n",
     "In last week's lecture content we mentioned that one way to regularize our ANNs is to make use of shared weights. In this notebook, we did not make use of that. Instead we used a large filter kernel to emulate a dense layer. To visualize this, take another look at [the interactive widget](file:///home/mp/Documents/Spinkk.github.io/singlekernel_nopadding.html) and set the kernel size to equal the input shape. \n",
     "\n",
