--- a/CNNs/Convolutional Layers and Weight Sharing.ipynb
+++ b/CNNs/Convolutional Layers and Weight Sharing.ipynb
@@ -5,11 +5,11 @@
    "id": "d7002d50",
    "metadata": {},
    "source": [
-    "# Fully connected layer with Conv2D\n",
+    "# Fully Connected Layers vs Convolutional Layers\n",
     "\n",
-    "This notebook demonstrates that a Conv2D layer can be reduced to a fully connected (dense) layer if the kernel size matches the input size, the strides are (1,1) and no padding is applied (padding=\"valid\").\n",
+    "By playing around with the interactive widgets, you've seen how convolutional layers transform input matrices and you've tested different settings involving different padding, kernel sizes, striding, number of filters and number of input channels. In this notebook we will look at how a convolutional layer differs from dense layers and how and in which aspects they share the same properties. We will find that convolutional layers can be thought of as generalizations of dense layers in that they allow for spatial weight sharing across the input.\n",
     "\n",
-    "First we demonstrate that such a convolutional layer can produce the same output if we use the same weights. Next we discuss ways in which convolutional layers can do the same operation as a fully connected layer, but with weights that are shared across the spatial structure of the input."
+    "First, let's see that a Conv2D layer can be reduced to a fully connected (dense) layer if the kernel size matches the input size, the strides are (1,1) and no padding is applied (i.e. padding=\"valid\"). Such a convolutional layer can produce the same output as a dense layer if we use the same weights. "
    ]
   },
   {
@@ -99,6 +99,14 @@
     "    denselayer.weights[0], shape = convlayer.weights[0].shape)).numpy())\n",
     "\n",
     "print(\"Same output for convolutional and dense layer:\", tf.reduce_all(convoutput == denseoutput).numpy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "267c45ad",
+   "metadata": {},
+   "source": [
+    "We showed that indeed convolutional layers can perform the exact same calculation done in a fully connected layer, leading to the same output given that the parameters are set to the same values. However, convolutional layers can do more than that if we use filter kernels that are smaller than the image, which we will discuss below."
    ]
   },
   {
