--- a/CNNs/Convolutional Layers and Weight Sharing.ipynb
+++ b/CNNs/Convolutional Layers and Weight Sharing.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fab0a478",
+   "metadata": {},
+   "source": [
+    "[Open in Google Colab](https://colab.research.google.com/github/Spinkk/TeachingTensorflow/blob/main/CNNs/Convolutional%20Layers%20and%20Weight%20Sharing.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d7002d50",
    "metadata": {},
    "source": [
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "267c45ad",
+   "id": "e73456f6",
    "metadata": {},
    "source": [
     "We showed that indeed convolutional layers can perform the exact same calculation done in a fully connected layer, leading to the same output given that the parameters are set to the same values. However, convolutional layers can do more than that if we use filter kernels that are smaller than the image, which we will discuss below."
@@ -124,7 +132,7 @@
    "source": [
     "# Convolutional layers for spatial weight sharing\n",
     "\n",
-    "In last week's lecture content we mentioned that one way to regularize our ANNs is to make use of shared weights. In this notebook, we did not make use of that. Instead we used a large filter kernel to emulate a dense layer. To visualize this, take another look at [the interactive widget](file:///home/mp/Documents/Spinkk.github.io/singlekernel_nopadding.html) and set the kernel size to equal the input shape. \n",
+    "In last week's lecture content we mentioned that one way to regularize our ANNs is to make use of shared weights. In this notebook, we did not make use of that. Instead we used a large filter kernel to emulate a dense layer. To visualize this, take another look at [the interactive widget](https://Spinkk.github.io/singlekernel_nopadding.html) and set the kernel size to equal the input shape. \n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
