--- a/CNNs/Convolutional Layers and Weight Sharing.ipynb
+++ b/CNNs/Convolutional Layers and Weight Sharing.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a5d74882",
    "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Spinkk/TeachingTensorflow/blob/main/CNNs/Convolutional%20Layers%20and%20Weight%20Sharing.ipynb)"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7002d50",
    "metadata": {},
    "source": [
     "# Fully Connected Layers vs Convolutional Layers\n",
@@ -22,8 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "aa36188b",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "b10d260c",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "175173b5",
    "metadata": {},
    "outputs": [
     {
@@ -111,27 +106,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d5c4677",
    "metadata": {},
    "source": [
     "We showed that indeed convolutional layers can perform the exact same calculation done in a fully connected layer, leading to the same output given that the parameters are set to the same values. However, convolutional layers can do more than that if we use filter kernels that are smaller than the image, which we will discuss below."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "ad19f452",
    "metadata": {},
    "source": [
     "# Convolutional layers for spatial weight sharing\n",
     "\n",
     "In last week's lecture content we mentioned that one way to regularize our ANNs is to make use of shared weights. In this notebook, we did not make use of that. Instead we used a large filter kernel to emulate a dense layer. To visualize this, take another look at [the interactive widget](https://Spinkk.github.io/singlekernel_nopadding.html) and set the kernel size to equal the input shape. \n",
     "\n",
-    "![fullyconnectedConv.jpg](https://github.com/Spinkk/TeachingTensorflow/blob/main/CNNs/fullyconnectedConv.jpg)\n",
+    "![fullyconnectedConv.jpg](https://raw.githubusercontent.com/Spinkk/TeachingTensorflow/main/CNNs/fullyconnectedConv.jpg)\n",
     "\n",
     "If however we use a kernel size that is smaller than the input size, we can see that the same weights are used for different locations in the input. This means we can do more with less parameters, having fewer parameters without losing the model's expressivity.\n",
     "\n",
-    "![weightssharedConv.jpg](https://github.com/Spinkk/TeachingTensorflow/blob/main/CNNs/weightssharedConv.jpg)\n",
+    "![weightssharedConv.jpg](https://raw.githubusercontent.com/Spinkk/TeachingTensorflow/main/CNNs/weightssharedConv.jpg)\n",
     "\n",
     "Can you think of reasons why such weight sharing in CNNs may help with overfitting? Does this still hold if we decide to scale up the number of filters and convolutional layers?"
    ]
@@ -139,9 +131,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:uni] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-uni-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
