--- a/CNNs/Convolutional Layers and Weight Sharing.ipynb
+++ b/CNNs/Convolutional Layers and Weight Sharing.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use tf.device context manager to force cpu usage (no need for a GPU here)",
+    "# use tf.device context manager to force cpu usage (no need for a GPU here)\n",
     "with tf.device('/device:cpu:0'):\n",
     "    \n",
     "    \n",
