Update Convolutional Layers and Weight Sharing.ipynb

--- a/CNNs/Convolutional Layers and Weight Sharing.ipynb
+++ b/CNNs/Convolutional Layers and Weight Sharing.ipynb
@@ -51,8 +51,8 @@
     "    denselayer= tf.keras.layers.Dense(n_outputs)\n",
     "    \n",
     "    # flatten input to process it with dense layer\n",
-    "    flatted_input = tf.keras.layers.Flatten()(input_img)\n",
-    "    denseoutput = denselayer(flatted_input)\n",
+    "    flattened_input = tf.keras.layers.Flatten()(input_img)\n",
+    "    denseoutput = denselayer(flattened_input)\n",
     "    \n",
     "    # process input with convlayer\n",
     "    convoutput = convlayer(input_img)\n",
