Update RNNs as temporal weight sharing.ipynb

--- a/RNNs/RNNs as temporal weight sharing.ipynb
+++ b/RNNs/RNNs as temporal weight sharing.ipynb
@@ -5,7 +5,8 @@
    "id": "43c7cbfa",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Spinkk/TeachingTensorflow/main/RNNs/RNNs%20as%20temporal%20weight%20sharing.ipynb)",
+    "$$[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Spinkk/TeachingTensorflow/main/RNNs/RNNs%20as%20temporal%20weight%20sharing.ipynb)$$",
+    "\n",
     "# Basic RNNs as fully connected network architectures with temporally shared weights\n",
     "\n",
     "In this notebook, we show how a basic RNN that uses a simple recurrent cell (no LSTM or GRU) transforms input by applying the same matrix multiplications at each time step, using the latest output as one of the inputs.\n",
