--- a/RNNs/RNNs as temporal weight sharing.ipynb
+++ b/RNNs/RNNs as temporal weight sharing.ipynb
@@ -5,7 +5,7 @@
    "id": "43c7cbfa",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/github/Spinkk/TeachingTensorflow/blob/main/RNNs/RNNs%20as%20temporal%20weight%20sharing.ipynb)]",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Spinkk/TeachingTensorflow/blob/main/RNNs/RNNs%20as%20temporal%20weight%20sharing.ipynb)\n",
     "\n",
     "# Basic RNNs as fully connected network architectures with temporally shared weights\n",
     "\n",
