--- a/RNNs/RNNs as temporal weight sharing.ipynb
+++ b/RNNs/RNNs as temporal weight sharing.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "More formally written, the computation of a simple RNN cell at one time-step can be described as follows:\n",
     "\n",
-    "### $$h^{<t+1>} = \tanh ( W_{hh} h^{<t>} + W_{xh} x^{<t>} + b )$$ \n",
+    "### $$h^{<t+1>} = tanh ( W_{hh} h^{<t>} + W_{xh} x^{<t>} + b )$$ \n",
     "\n",
     "Where $x^{<t>}$ is the feature input at time-step t, and $W_{xh}$ is a matrix of shape x (the dimensionality of the input feature vector at a single time-step) by h (the dimensionality of the hidden state).\n",
     "\n",
