Update RNNs as temporal weight sharing.ipynb

--- a/RNNs/RNNs as temporal weight sharing.ipynb
+++ b/RNNs/RNNs as temporal weight sharing.ipynb
@@ -423,7 +423,7 @@
    "source": [
     "# Implementing custom RNNs with subclassing\n",
     "\n",
-    "Let's start with writing the RNNWrapper function which loops over the observations at the different time-steps.\n",
+    "Let's start with writing the RNNWrapper layer which loops over the observations at the different time-steps.\n",
     "\n",
     "Like in tf.keras.layers.RNN, we implement a return_sequences argument that controls whether to return a sequence of hidden states or just the last hidden state.\n",
     "\n",
