--- a/RNNs/Implementing Custom RNNs using Tensorflow and Keras.ipynb
+++ b/RNNs/Implementing Custom RNNs using Tensorflow and Keras.ipynb
@@ -5,7 +5,7 @@
    "id": "43c7cbfa",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Spinkk/TeachingTensorflow/blob/main/RNNs/RNNs%20as%20temporal%20weight%20sharing.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Spinkk/TeachingTensorflow/blob/main/RNNs/Implementing%20Custom%20RNNs%20using%20Tensorflow%20and%20Keras.ipynb)\n",
     "\n",
     "# Implementing Custom RNNs using Tensorflow and Keras\n",
     "\n",
