Update DenseNet in the functional API.ipynb

--- a/Advanced CNNs/DenseNet in the functional API.ipynb
+++ b/Advanced CNNs/DenseNet in the functional API.ipynb
@@ -142,7 +142,7 @@
    "source": [
     "# Showing a simplified DenseNet\n",
     "\n",
-    "Before we take a look at what a full DenseNet121 implementation looks like to appreciate why it is called Deep Learning, let's look at a strongly simplified version of a DenseNet Plotting the 429 layers of the DenseNet121 is probably not a good idea. So let's create a simplified version and just show one DenseBlock (with one convolutional block) followed by a transition layer.\n",
+    "Before we take a look at what a full DenseNet121 implementation looks like to appreciate why it is called Deep Learning, let's look at a strongly simplified version of a DenseNet with just one DenseBlock (with one convolutional block) followed by a transition layer.\n",
     "\n",
     "The first part of the network is a simple convolutional layer followed by (unstrided) max pooling. For higher resolution images typically strided convolution followed by strided pooling is used to subsample the feature maps."
    ]
