--- a/Using the TensorBoard/Keeping track of training data with TensorBoard.ipynb
+++ b/Using the TensorBoard/Keeping track of training data with TensorBoard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fd0daa53",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import tensorflow_datasets as tfds\n",
     "import math\n",
     "\n",
-    "import time\n",
+    "import tqdm\n",
     "import datetime"
    ]
   },
@@ -20,7 +20,7 @@
    "id": "7f2f2dc2",
    "metadata": {},
    "source": [
-    "# Using TensorBoard to track metrics\n",
+    "# Using TensorBoard to track metrics, images, audio and text\n",
     "\n",
     "In this notebook I will show how to use the TensorBoard extension which allows to keep track of training runs and data associated with each epoch (e.g. loss, accuracies, predicted/generated outputs, activation statistics etc.)\n",
     "\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7a1b8899",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,10 @@
     "# define the tf file-writer (we usually use a separate one for train and validation)\n",
     "summary_writer = tf.summary.create_file_writer(file_path)\n",
     "\n",
+    "loss_function = tf.keras.losses.MeanSquaredError()\n",
+    "\n",
     "# write 100 logs for loss\n",
+    "\n",
     "\n",
     "for i in range(100):\n",
     "    \n",
@@ -64,9 +67,7 @@
     "    targets = tf.constant([0.3,0.3,-0.8])\n",
     "    predictions = targets + tf.random.normal(shape=targets.shape, stddev=100/(i+1)) # decreasing noise\n",
     "    \n",
-    "    loss_function = tf.keras.losses.MeanSquaredError()\n",
     "    loss = loss_function(targets,predictions)\n",
-    "    \n",
     "    \n",
     "    # image batch (these would be obtained from the model)\n",
     "    \n",
@@ -84,7 +85,7 @@
     "    \n",
     "    # text (this would be the output of a language model after one training epoch)\n",
     "    \n",
-    "    text_batch = tf.constant(\"This is the sampled output of a language model\")\n",
+    "    text = tf.constant(\"This is the sampled output of a language model\")\n",
     "    \n",
     "    \n",
     "    # histogram (e.g. of activations of a dense layer during training)\n",
@@ -110,7 +111,7 @@
     "                         sample_rate = 32000, step=i, max_outputs=32)\n",
     "        \n",
     "        # save the generated text for that epoch\n",
-    "        tf.summary.text(name=\"generated_text\", data = text_batch, step=i)\n",
+    "        tf.summary.text(name=\"generated_text\", data = text, step=i)\n",
     "        \n",
     "        # save a histogram (e.g. of activations in a layer)\n",
     "        tf.summary.histogram(name=\"layer_N_activations\", data = histogram, step=i)"
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8568d249",
    "metadata": {
     "scrolled": false
@@ -138,22 +139,13 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 11605), started 3:17:40 ago. (Use '!kill 11605' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-13392e40749a50d\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-9749279435a2622b\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-13392e40749a50d\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-9749279435a2622b\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -197,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "89ff255b",
    "metadata": {},
    "outputs": [],
@@ -320,12 +312,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7a7af59b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds =tfds.load(\"fashion_mnist\", as_supervised=True)\n",
+    "ds = tfds.load(\"fashion_mnist\", as_supervised=True)\n",
     "\n",
     "train_ds = ds[\"train\"]\n",
     "val_ds = ds[\"test\"]\n",
@@ -348,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e5068b33",
    "metadata": {},
    "outputs": [],
@@ -372,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "96f8a5b7",
    "metadata": {},
    "outputs": [],
@@ -384,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "474d53ac",
    "metadata": {},
    "outputs": [],
@@ -415,14 +407,14 @@
     "If you use keras metrics, do not forget to reset the states between train and validation and between epochs.\n",
     "We use metric.update_states(...) to update a metric. This usually means we update the running average with the new value. There also exist keras metrics that can also compute scores such as CategoricalAccuracy, TopKCategoricalAccuracy.\n",
     "\n",
-    "For your own training loops, you may want to add TQDM to see the progress of each epoch and the estimate of how much time it will take.\n",
+    "We use TQDM to see the progress of each epoch and the estimate of how much time it will take.\n",
     "\n",
-    "Instead of looking at the printed losses and accuracies, we can look at the TensorBoard plots which will be updated after every epoch."
+    "Instead of looking at the printed losses and accuracies, we can look at the TensorBoard plots which will be updated after every epoch. This requires us to open and load the tensorboard before starting the training."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "02bdf983",
    "metadata": {},
    "outputs": [
@@ -430,29 +422,129 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0:\n",
-      "['loss: 1.609331727027893', 'acc: 0.5475833415985107', 'top-3-acc: 0.8635333180427551']\n",
-      "['val_loss: 1.2642236948013306', 'val_acc: 0.6227999925613403', 'val_top-3-acc: 0.8938000202178955']\n",
+      "Epoch 0:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce0e16ba7a28419a9a1f57c51cb40247",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['loss: 1.6330411434173584', 'acc: 0.5378666520118713', 'top-3-acc: 0.8592833280563354']\n",
+      "['val_loss: 1.154301404953003', 'val_acc: 0.673799991607666', 'val_top-3-acc: 0.9290000200271606']\n",
       "\n",
       "\n",
-      "Epoch 1:\n",
-      "['loss: 1.1726185083389282', 'acc: 0.6559500098228455', 'top-3-acc: 0.9244666695594788']\n",
-      "['val_loss: 1.4290522336959839', 'val_acc: 0.51419997215271', 'val_top-3-acc: 0.8436999917030334']\n",
+      "Epoch 1:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d618b4e23ae248a09928bbbc75f5a135",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['loss: 1.187164068222046', 'acc: 0.649316668510437', 'top-3-acc: 0.9222833514213562']\n",
+      "['val_loss: 1.3182868957519531', 'val_acc: 0.5504999756813049', 'val_top-3-acc: 0.8981000185012817']\n",
       "\n",
       "\n",
-      "Epoch 2:\n",
-      "['loss: 1.1076161861419678', 'acc: 0.6722833514213562', 'top-3-acc: 0.9319666624069214']\n",
-      "['val_loss: 1.187070369720459', 'val_acc: 0.6211000084877014', 'val_top-3-acc: 0.9394999742507935']\n",
+      "Epoch 2:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bc3beac3b4174012bce3649138ca4500",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['loss: 1.1142741441726685', 'acc: 0.6719833612442017', 'top-3-acc: 0.9315999746322632']\n",
+      "['val_loss: 1.130450963973999', 'val_acc: 0.6363999843597412', 'val_top-3-acc: 0.9246000051498413']\n",
       "\n",
       "\n",
-      "Epoch 3:\n",
-      "['loss: 1.0730130672454834', 'acc: 0.6803666949272156', 'top-3-acc: 0.936033308506012']\n",
-      "['val_loss: 1.6239241361618042', 'val_acc: 0.5058000087738037', 'val_top-3-acc: 0.8766000270843506']\n",
+      "Epoch 3:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5642f90b77114799a466f68606dd1e29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['loss: 1.0702484846115112', 'acc: 0.6819000244140625', 'top-3-acc: 0.9362333416938782']\n",
+      "['val_loss: 1.3629615306854248', 'val_acc: 0.5706999897956848', 'val_top-3-acc: 0.9161999821662903']\n",
       "\n",
       "\n",
-      "Epoch 4:\n",
-      "['loss: 1.049936294555664', 'acc: 0.6890000104904175', 'top-3-acc: 0.9362499713897705']\n",
-      "['val_loss: 1.0211036205291748', 'val_acc: 0.6879000067710876', 'val_top-3-acc: 0.9570000171661377']\n",
+      "Epoch 4:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0004a9904f19487aa115c224a4f86ddc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1875 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['loss: 1.0496524572372437', 'acc: 0.6887166500091553', 'top-3-acc: 0.9386000037193298']\n",
+      "['val_loss: 1.530083179473877', 'val_acc: 0.5160999894142151', 'val_top-3-acc: 0.8410999774932861']\n",
       "\n",
       "\n"
      ]
@@ -465,7 +557,7 @@
     "    \n",
     "    # Training:\n",
     "    \n",
-    "    for data in train_ds:\n",
+    "    for data in tqdm.notebook.tqdm(train_ds,position=0, leave=True):\n",
     "        metrics = model.train_step(data)\n",
     "    \n",
     "    # print the metrics\n",
@@ -500,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "50ab2fca",
    "metadata": {},
    "outputs": [
@@ -508,11 +600,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-744c2a47baf2f177\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-f8f661e9e9e61fb4\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-744c2a47baf2f177\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-f8f661e9e9e61fb4\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6007;\n",
        "          if (port) {\n",
@@ -549,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "23e9806f",
    "metadata": {},
    "outputs": [],
@@ -560,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d5aaca57",
    "metadata": {},
    "outputs": [],
